--- a/menu principal.html
+++ b/menu principal.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <body bgcolor="black">
-    <title>MENU</title>
+    <title>BIBLIOTECA</title>
 <style>
     .menuprincipal {
         background-color: #00ffff;
@@ -85,8 +85,6 @@
                         <a href="GALLETAS.html" target="derecho">GALLETAS</a>
                         <a href="EMPANADAS.html" target="derecho">EMPANADAS</a>
                         <a href="GELATINAS.html" target="derecho">GELATINAS</a>
-                        <a href="HAZ TU PEDIDO.html" target="derecho">HAZ TU PEDIDO</a>
-                        <a href="SERVICIO A DOMICILIO.html" target="derecho">SERVICIO A DOMICILIO</a>
 
 
 
