--- a/main.html
+++ b/main.html
@@ -1,30 +1,20 @@
 <!doctype html>
 <html>
 <head>
-    <title> PASTELERIA LUCERITO </title>
+    <title> PASTELERÍA LUCERITO </title>
     <style>
         body {
-            background-color: yellow;
+            background-color: #000000;
         }
     </style>
 </head>
-
 <frameset rows="%,100%">
-<frame sr="" name="superior">
-    <frameset cols="20%,*">
-        <frame src="menu principal.html" name= "izquierdo">
-        <frame src="A prueba.html" name= "derecho">
+    <frame src="" name="superior">
+    <frameset cols="25,75">
+        <frame src="menu principal.html" name="izquierdo">
+        <frame src="A prueba.html" name="derecho">
     </frameset>
 </frameset>
 
+
 </html>
-
-
-
-
-
-
-
-
-
-
