Update menu principal.html 150424

--- a/menu principal.html
+++ b/menu principal.html
@@ -1,1 +1,97 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+<body bgcolor="black">
+    <title>MENU</title>
+<style>
+    .menuprincipal {
+        background-color: #00ffff;
+        color: #000080;
+        border-color: #Efb810;
+        cursor: pointer;
+        padding: 10px;
+        margin-top: 10px;
+        border-radius: 10px;
+    }
+
+    .menuprincipal:hover {
+        color: #ffffff;
+        background-color: #Efb810;
+        padding: 10px;
+        margin-top: 10px;
+        border-radius: 0px;
+        border-color: #000080;
+    }
+
+    .desplegable {
+        position: relative;
+        border-color: #000080;
+        color: #000080;
+    }
+
+    .desplegable-hijo {
+        display: none;
+        background-color: #000080;
+        min-width: 100px;
+        border-color: #1B3D81;
+        color: #white;
+        margin-top: 5px;
+    }
+
+    .desplegable-hijo a {
+        background-color: #Efb810;
+        color: #00ffff;
+        padding: 10px;
+        text-decoration: none;
+        display: block;
+        border-color: #1B3D81;
+    }
+
+    .desplegable:hover .desplegable-hijo {
+        display: block;
+    }
+</style>
+<style>
+    a:link {
+        background-color: #Efb810;
+        color: #000080;
+        border-color: #1B3D81;
+    }
+
+    a:hover {
+        color: #ffffff;
+        background-color: #790000;
+        border-color: #ffffff;
+        transform: scaleX(1.1);
+        transition: ease-in;
+        transition-duration: 0.2s;
+    }
+</style>
+
+<body background="OIP12.jpg">
+    <center>
+        <div class="desplegable">
+            <button class="menuprincipal"> GALERÍA </button>
+            <div class="desplegable-hijo">
+
+                        <a href="PASTELES 3 LECHES.html" target="derecho">PASTELES 3 LECHES</a>
+                        <a href="PASTELES MANTEQUILLA.html" target="derecho">PASTELES MANTEQUILLA</a>
+                        <a href="PASTELES CON FUENTE.html" target="derecho">PASTELES CON FUENTE</a>
+                        <a href="PASTELES FONDANT.html" target="derecho">PASTELES FONDANT</a>
+                        <a href="PASTELES CON ROSAS NATURALES.html" target="derecho">PASTELES CON ROSAS NATURALES</a>
+                        <a href="PASTELES PARA DIABETICOS.html" target="derecho">PASTELES PARA DIABETICOS</a>
+                        <a href="GALLETAS.html" target="derecho">GALLETAS</a>
+                        <a href="EMPANADAS.html" target="derecho">EMPANADAS</a>
+                        <a href="OTROS POSTRES.html" target="derecho">OTROS POSTRES</a>
+
+
+
+
+
+            </div>
+        </div>
+    </center>
+
+</body>
+</html>
